# radiant-graph-take-home

./: .env.example  .gitignore  README.md  Tiltfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
app/api/: __init__.py  analytics.py  customers.py  health.py  orders.py
app/api/queries/: __init__.py  analytics_queries.py  customer_queries.py  health_queries.py  orders_queries.py
app/api/routes/: analytics.py  customers.py  health.py  orders.py
app/api/services/: __init__.py  analytics_service.py  customers_service.py  health_service.py  orders_service.py
app/queries/: analytics_queries.py  customer_queries.py  orders_queries.py
app/services/: analytics_service.py  customers_service.py  orders_service.py
migrations/: remove_shipping_address_id.py
radiant_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: clear_data.py  create_mock_data.py  setup_database.py  setup_test_db.sh
scripts/migrations/: add_order_type.py
tests/: conftest.py  mock_data.py  test_analytics.py  test_customers.py  test_orders.py
