[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiant-graph"
version = "0.1.0"
description = "Radiant Graph API Service"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "pydantic>=1.8.0,<2.0.0",
    "uvicorn>=0.15.0,<0.16.0",
    "sqlalchemy<2.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "email-validator==2.1.0",
    "python-multipart>=0.0.6"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio==0.21.1",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "black",
    "isort",
    "flake8",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = [".git", "__pycache__", "build", "dist"]

[project.scripts]
radiant-graph = "app.main:cli"
dev = "app.main:dev"
start = "app.main:main"
test = "pytest:main"
lint = "flake8.main:main"
format = "black.main:main"
typecheck = "mypy.main:main" 